--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>React App</title>
+    <title>MH Coaching & Private Training</title>
   </head>
 
   <body>
